# dx_com-gui

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: API.md  DEPLOYMENT.md  INSTALLATION.md  QUICK_REFERENCE.md  USER_GUIDE.md  dxcom_wrapper.md  integration_guide.md
install/: dxcom-gui.desktop  install.sh  launcher.sh
resources/: create_icon.py
src/: __init__.py  __main__.py  dxcom_detector.py  dxcom_wrapper.py  environment_validator.py  error_dialog.py  error_handler.py  json_config_dialog.py  main_window.py  python_script_dialog.py  settings_dialog.py  settings_manager.py  themes.py
tests/: __init__.py  conftest.py  test___main__.py  test_command_builder.py  test_dxcom_detector.py  test_dxcom_wrapper.py  test_dxcom_wrapper_helpers.py  test_environment_validator.py  test_error_handler.py  test_gui_error_dialog.py  test_gui_json_config_dialog.py  test_gui_main_window.py  test_gui_python_script_dialog.py  test_gui_settings_dialog.py  test_main_argparse.py  test_sample_models.py  test_settings_manager.py  test_themes.py
