[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dxcom-gui"
version = "1.0.0"
description = "Professional GUI for compiling ONNX models to DXNN format using DXCom compiler"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary"}
authors = [
    {name = "Your Name", email = "contact@example.com"}
]
maintainers = [
    {name = "Your Name", email = "contact@example.com"}
]
keywords = [
    "onnx",
    "dxnn",
    "model-compiler",
    "neural-network",
    "deep-learning",
    "gui",
    "qt",
    "pyside6"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Compilers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Environment :: X11 Applications :: Qt",
]

dependencies = [
    "PySide6>=6.4.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-qt>=4.0.0",
    "flake8>=5.0.0",
    "black>=22.0.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/yourusername/dx_com_gui"
Documentation = "https://github.com/yourusername/dx_com_gui/blob/main/README.md"
Repository = "https://github.com/yourusername/dx_com_gui"
Issues = "https://github.com/yourusername/dx_com_gui/issues"
Changelog = "https://github.com/yourusername/dx_com_gui/blob/main/CHANGELOG.md"

[project.scripts]
dxcom-gui = "src.__main__:main"

[tool.setuptools]
packages = ["src", "src.resources"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.png", "*.qss", "*.json"]
"src.resources" = ["*.png", "*.jpg", "*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.pytest_cache
  | __pycache__
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "PySide6.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
